# real-estate-agent-tools

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml  scratch.ipynb
backend/backend/: models.py  post_coordinator.py  routes.py
backend/backend/clients/: openai.py
backend/backend/services/: document.py  post_generation.py  property.py
backend/tests/: factories.py
backend/tests/integration/: main_test.py
backend/tests/unit/: post_coordinator_test.py  routes_test.py
backend_python/: pyproject.toml
backend_python/backend/: container.py  exceptions.py  main.py  models.py  post_coordinator.py  routes.py  schema.py  template_loader.py
backend_python/backend/clients/: google_maps.py  openai.py  rentcast.py
backend_python/backend/repositories/: document_embeddings.py
backend_python/backend/services/: __init__.py  document.py  pdf_service.py  post_generation.py  property.py
backend_python/backend/templates/: post_prompt.txt  system_prompt.txt
backend_python/tests/: conftest.py
backend_python/tests/integration/: main_test.py
backend_python/tests/unit/: post_coordinator_test.py  routes_test.py  template_loader_test.py
backend_python/tests/unit/repositories/: document_embedding_test.py
backend_python/tests/unit/services/: document_service_test.py  post_generation_service_test.py  property_service_test.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  apiClient.js  index.js
frontend/src/components/: AddProperty.js  AddressInput.css  AddressInput.js  AgentInfo.js  DefaultPromptEditor.js  (+11 more)
(+18 files in other folders)
