[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Cody Hutchens <chutchens91@gmail.com>"]
readme = "README.md"
packages = [{ include = "backend", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.113.0"
uvicorn = "^0.30.6"
pydantic = "^2.9.0"
dependency-injector = "^4.41.0"
redis = "^5.0.8"
aiohttp = "^3.10.5"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
